fix header overlap on nav link

--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ hr {
     position: sticky;
     top: 0;
     background-color: var(--base);
-    padding: 0 0 0.6rem 0;
+    margin: 0 0 0.6rem 0;
     z-index: 99;
 }
 
@@ -106,4 +106,8 @@ hr {
 .footer {
     color: var(--secondary);
     font-style: italic;
+}
+
+.about, .work, .contact {
+    scroll-margin-top: 5.2rem;
 }
